<resources>
    <string name="app_name">MeteringApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lux">Lux</string>
    <string name="lux_standard_value">0</string>
    <string name="lux_max_label">Max</string>
    <string name="lux_min_label">Min</string>
    <string name="lux_save_button">Save max</string>
    <string name="lux_reset_button">Reset</string>
    <string name="lux_lightsensor_not_available">Light Sensor not available</string>
    <string name="title_activity_tilt_angle">TiltAngleActivity</string>
    <string name="angle">Angle</string>
    <string name="angle_button_save">Copy</string>
    <string name="title_activity_lux">LuxActivity</string>
    <string name="main_lux_button">Get Lux</string>
    <string name="main_lux">Measured lux: 0</string>
    <string name="main_angle_button">Get Angle</string>
    <string name="main_angle">Measured angle: 0</string>
    <string name="main_lux_formatted">Measured lux: %1$s</string>
    <string name="main_angle_formatted">Measured angle: %1$s</string>
    <string name="angle_button_calibrate">calibrate</string>
    <string name="title_activity_angle">AngleActivity</string>
    <string name="title_activity_rotation_vector_demo">RotationVectorDemo</string>
    <string name="title_activity_calibrate">Calibrate</string>
</resources>
