<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/main_background"
    >


    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_lux"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_textview_lux"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_lux_button"
            android:id="@+id/main_button_lux"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_angle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_textview_angle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_angle_button"
            android:id="@+id/main_button_angle"
            android:layout_marginLeft="20dp" />
    </LinearLayout>



</LinearLayout>
